Fixed bug with spacing

--- a/style/app.css
+++ b/style/app.css
@@ -20,6 +20,7 @@ img {
 }
 a {
   color: #a4f4db;
+  margin-right: 20px;
 }
 .links {
   display: flex;
